docs: fold NetSuite JDBC spike findings into spec (TBA resolved, viable)
Spike ingestr#eqkh proved the full path end-to-end on macOS arm64 natively:
Java(NetSuite JDBC) -> arrow-jdbc 17 -> Arrow IPC -> Go -> DuckDB. Independently
verified the output (25 transaction rows, wide text >1024 chars intact, no crash).

Key resolved/learned items now in the committed spec so they survive the
gitignored throwaway spike dir:
- TBA over JDBC: UID="TBA" + the existing token-password computation (same as
  ODBC tba.go); tokens never sent as connection properties.
- TLS encrypted=1 works on the JVM default truststore; shipped certs are public
  DigiCert roots (fallback only).
- arrow-jdbc 17 emits millisecond timestamps -> helper must rescale to micros.
- JDK17+ needs --add-opens=java.base/java.nio=ALL-UNNAMED for arrow-memory-netty.

kata: ingestr#eqkh (spike, done), ingestr#9ecz (design)

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>